--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,18 +5,36 @@ android {
     buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "com.coolweather.android"
-        minSdkVersion 15
+        minSdkVersion 10
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    productFlavors {
+        qihoo{
+            applicationId "com.coolweather.android.qihoo"
+        }
+        baidu{
+            applicationId "com.coolweather.android.baidu"
+        }
+    }
+    signingConfigs{
+        config{
+            storeFile file(KEY_PATH)
+            storePassword KEY_PASS
+            keyAlias ALIAS_NAME
+            keyPassword ALIAS_PASS
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
+
 }
 
 dependencies {
