--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,9 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+KEY_PATH=D:/MYSQL/java/keys/jiangsw.jks
+KEY_PASS=asd3197270
+ALIAS_NAME=jiangswdev
+ALIAS_PASS=asd3197270
+
